//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Permission {
  id Int [pk, increment]
  action String [not null]
  condition Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  subjectId Int
  subject Subject
  rolePermissions RolePermission [not null]

  indexes {
    (action, subjectId) [unique]
  }
}

Table Subject {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  permissions Permission [not null]
}

Table RolePermission {
  id Int [pk, increment]
  roleId Int
  permissionId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  permission Permission
  role Role

  indexes {
    (roleId, permissionId) [unique]
  }
}

Table Role {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  rolePermissions RolePermission [not null]
  user User [not null]
}

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  roleId Int
  name String [not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  role Role
}

Table Staff {
  id Int [pk, increment]
  name String [not null]
  mobile String [unique, not null]
  staffDesignationId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  designation StaffDesignation [not null]
  attendance Attendance [not null]
  leave Leave [not null]
  Service Service [not null]
}

Table StaffDesignation {
  id Int [pk, increment]
  name String [unique, not null]
  description String
  totalLeave Int [not null, default: 15]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  staff Staff [not null]
}

Table Attendance {
  id Int [pk, increment]
  staffId Int [not null]
  status AttendaceStatus [not null, default: 'ABSENT']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  date DateTime [not null]
  staff Staff [not null]

  indexes {
    (staffId, date) [unique]
  }
}

Table Leave {
  id Int [pk, increment]
  staffId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  days Int [not null, default: 0]
  description String [not null]
  from DateTime [not null]
  to DateTime [not null]
  staff Staff [not null]
}

Table Customer {
  id Int [pk, increment]
  name String [not null]
  mobile String [unique, not null]
  email String
  address String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  vehicle OwnedVehicle [not null]
  Service Service [not null]
  transaction Transaction [not null]
}

Table Transaction {
  id Int [pk, increment]
  medium PaymentMedium [not null, default: 'CASH']
  serviceId Int [unique, not null]
  customerId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  Customer Customer
  Service Service [not null]
}

Table Vehicle {
  id Int [pk, increment]
  name String [not null]
  fuel String
  engine String
  mileage String
  transmission String
  features String
  ownedVehicle OwnedVehicle [not null]
  vehicleTypeId Int [not null]
  vehicleWheelerTypeId Int [not null]
  vehicleBrandId Int [not null]
  brand VehicleBrand [not null]
  type VehicleType [not null]
  wheelerType VehicleWheelerType [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table OwnedVehicle {
  id Int [pk, increment]
  kilometerRun String
  makeYear String
  color String
  price String
  numberPlate String [not null]
  customerId Int [not null]
  vehicleId Int [not null]
  customer Customer [not null]
  vehicle Vehicle [not null]
  Service Service [not null]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
}

Table VehicleBrand {
  id Int [pk, increment]
  name String [not null]
  vehicleWheelerTypeId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  vehicleWheelerType VehicleWheelerType
  Vehicle Vehicle [not null]
}

Table VehicleType {
  id Int [pk, increment]
  name String [not null]
  vehicleWheelerTypeId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  vehicleWheelerType VehicleWheelerType
  Vehicle Vehicle [not null]
}

Table VehicleWheelerType {
  id Int [pk, increment]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  brands VehicleBrand [not null]
  types VehicleType [not null]
  Vehicle Vehicle [not null]
}

Table Service {
  id Int [pk, increment]
  customerId Int [not null]
  vehicleId Int [not null]
  staffId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  serviceName ServiceOffered [not null]
  customer Customer [not null]
  staff Staff
  vehicle OwnedVehicle [not null]
  transaction Transaction
}

Enum AttendaceStatus {
  PRESENT
  ABSENT
  LEAVE
}

Enum PaymentMedium {
  CASH
  CREDIT
  ESEWA
  KHALTI
  FONEPAY
}

Enum ServiceOffered {
  RECONDITION
  WASH
  SERVICING
}

Ref: Permission.subjectId > Subject.id

Ref: RolePermission.permissionId > Permission.id [delete: Cascade]

Ref: RolePermission.roleId > Role.id [delete: Cascade]

Ref: User.roleId > Role.id

Ref: Staff.staffDesignationId > StaffDesignation.id

Ref: Attendance.staffId > Staff.id

Ref: Leave.staffId > Staff.id

Ref: Transaction.customerId > Customer.id

Ref: Transaction.serviceId - Service.id

Ref: Vehicle.vehicleBrandId > VehicleBrand.id

Ref: Vehicle.vehicleTypeId > VehicleType.id

Ref: Vehicle.vehicleWheelerTypeId > VehicleWheelerType.id

Ref: OwnedVehicle.customerId > Customer.id

Ref: OwnedVehicle.vehicleId > Vehicle.id

Ref: VehicleBrand.vehicleWheelerTypeId > VehicleWheelerType.id

Ref: VehicleType.vehicleWheelerTypeId > VehicleWheelerType.id

Ref: Service.customerId > Customer.id

Ref: Service.staffId > Staff.id

Ref: Service.vehicleId > OwnedVehicle.id